2017-08-10  Zan Dobersek  <zdobersek@igalia.com>

        [TexMap] Remove GraphicsContext3D usage from BitmapTexturePool
        https://bugs.webkit.org/show_bug.cgi?id=175319

        Reviewed by Carlos Garcia Campos.

        Drop the GraphicsContext3D reference in BitmapTexturePool now
        that the BitmapTextureGL doesn't require it anymore.

        No new tests -- no change in behavior.

        * platform/graphics/texmap/BitmapTexturePool.cpp:
        (WebCore::BitmapTexturePool::BitmapTexturePool):
        * platform/graphics/texmap/BitmapTexturePool.h:
        * platform/graphics/texmap/TextureMapperGL.cpp:
        (WebCore::TextureMapperGL::TextureMapperGL):

2017-08-14  Zan Dobersek  <zdobersek@igalia.com>

        REGRESSION(r220517-r220521) [GTK] Various compositing tests fail
        https://bugs.webkit.org/show_bug.cgi?id=175478

        Reviewed by Sergio Villar Senin.

        Fix a regression introduced in r220519. Move a framebuffer binding in TextureMapperGL
        away from GraphicsContext3D and onto the OpenGL API to work around the framebuffer
        binding state that's kept in the GraphicsContext3D class. This mismatch in how the
        framebuffer was bound was causing a couple of test failures in compositing tests.

        No new tests -- regressed tests have their failure expectations removed.

        * platform/graphics/texmap/TextureMapperGL.cpp:
        (WebCore::TextureMapperGL::bindDefaultSurface): Don't use GraphicsContext3D for the
        glBindFramebuffer() call. This would be done in subsequent patches that would move
        TextureMapperGL off the GraphicsContext3D usage, but this specific use case clashes
        with the framebuffer binding that's done in BitmapTextureGL and was causing test
        failures.

2017-08-10  Zan Dobersek  <zdobersek@igalia.com>

        [TexMap] Drop GraphicsContext3D usage from BitmapTextureGL
        https://bugs.webkit.org/show_bug.cgi?id=175317
