@@ -1,5 +1,14 @@
 2017-08-10  Zan Dobersek  <zdobersek@igalia.com>
 
+        Unreviewed GTK+ build fix for ENABLE_GLES2=ON.
+
+        * platform/graphics/texmap/TextureMapperGLHeaders.h:
+        Define various GL constants that are not provided in GLES2 headers
+        but are only leveraged in OpenGL calls if at runtime the underlying
+        OpenGL is GLES2-capable.
+
+2017-08-10  Zan Dobersek  <zdobersek@igalia.com>
+
         [TexMap] Remove GraphicsContext3D usage from BitmapTexturePool
         https://bugs.webkit.org/show_bug.cgi?id=175319
 
